lesson02/styles/base.css
* {
    box-sizing: border-box;
}

header {
    text-align: center;
    background-color: #254774;
    color: white;
    padding: 1rem;
}

h1 {
    margin: 0;
}

body {
    font-family: 'Robot' sans-serif;
}


section {
    background-color: #bec1c6;
    margin: 10px;
    border-radius: 20px;
}


h2 {
    background-color: #254774;
    color: white;
    padding: 1rem;
    margin: 0;
    border-radius: 20px;
}

a {
    padding: 1rem;
    font-size: medium;
}

p {
    padding: 1rem;
    margin: 0;
}

img {
    width: 100%;
}

footer {
    background-color: #254774;
    color: white;
    text-align: center;
}

